Edit form and input

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Beyoncé - Formation - YouTube</title>
         <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
         <meta charset='UTF-8'>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
         <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr' crossorigin='anonymous' rel='stylesheet'>
         <link href='style.css' rel='stylesheet'>
     </head>
@@ -14,17 +14,18 @@
 
             <nav>
 
-                <a href='#'><i class="material-icons menu">menu</i></a>
+                <a href='#'><i class='material-icons menu'>menu</i></a>
                 <div class='logo-container'>
                     <a href='#'><img src='assets/yt_logo_rgb_dark.png' alt='YouTube logo' height='18'></a>
                 </div>
-                <form actiom='#' name='search'>
-                    <input type='text' name='searchbar' size=50 placeholder='Search'><button type='submit'><i class="material-icons">search</i></button>
+                <form action='#' method='post'>
+                    <input type='search' name='search-request' size=50 placeholder='Search'>
+                    <button type='submit'><i class='material-icons'>search</i></button>
                 </form>
-                <a href='#'><i class="fas fa-upload"></i></a>
-                <a href='#'><i class="material-icons apps">apps</i></a>
-                <a href='#'><i class="fas fa-comment-dots"></i></a>
-                <a href='#'><i class="material-icons settings">more_vert</i></a>
+                <a href='#'><i class='fas fa-upload'></i></a>
+                <a href='#'><i class='material-icons apps'>apps</i></a>
+                <a href='#'><i class='fas fa-comment-dots'></i></a>
+                <a href='#'><i class='material-icons settings'>more_vert</i></a>
                 <a class='sign-in' href='#'>Sign in</a>
 
             </nav>
@@ -43,22 +44,22 @@
                             <h3>155,667,807 views</h3>
                             <div class='video-options'>
                                 <div class='like'>
-                                    <a href='#'><i class="material-icons">thumb_up</i></a>
+                                    <a href='#'><i class='material-icons'>thumb_up</i></a>
                                     <a href='#'>1.1M</a>
                                 </div>
                                 <div class='dislike'>
-                                    <a href='#'><i class="material-icons">thumb_down</i></a>
+                                    <a href='#'><i class='material-icons'>thumb_down</i></a>
                                     <a href='#'>57K</a>
                                 </div>
                                 <div class='share'>
-                                    <a href='#'><i class="fas fa-share"></i></a>
+                                    <a href='#'><i class='fas fa-share'></i></a>
                                     <a href='#'>Share</a>
                                 </div>
                                 <div class='save'>
-                                    <a href='#'><i class="material-icons">playlist_add</i></a>
+                                    <a href='#'><i class='material-icons'>playlist_add</i></a>
                                     <a href='#'>Save</a>
                                 </div>
-                                <a href='#'><i class="material-icons actions">more_horiz</i></a>
+                                <a href='#'><i class='material-icons actions'>more_horiz</i></a>
                             </div>
                             <div class='sentiment'>
                                 <div class='like-bar'></div>
@@ -71,7 +72,7 @@
                         <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48px' height='48px'></a>
                         <div class='info-container'>
                             <div class='channel-name'>
-                                <h4><a href='#'>Beyoncé</a></h4> <i class="material-icons">music_note</i>
+                                <h4><a href='#'>Beyoncé</a></h4> <i class='material-icons'>music_note</i>
                             </div>
                             <div class='published'>Published on Dec 9, 2016</div>
                             <p class='description'>
@@ -90,7 +91,7 @@
                     <header>
                         <h2>40,932 Comments</h2>
                         <div class='sort-by'>
-                            <a href='#'><i class="material-icons">sort</i></a>
+                            <a href='#'><i class='material-icons'>sort</i></a>
                             <a href='#'>Sort by</a>
                         </div>
                     </header>
@@ -107,20 +108,20 @@
                         <div class='comment-info'>
                             <div class='comment-who-when'>
                                 <h5><a href='#'>Rihanna</a></h5>
-                                <i class="material-icons">check_circle</i>
+                                <i class='material-icons'>check_circle</i>
                                 <a class='ago' href='#'>4 months ago</a>
                             </div>
                             <p class='comment-text'>
                                 Work work work work work. 😯😯🔥🔥
                             </p>
                             <div class='comment-options'>
-                                <a href='#'><i class="material-icons">thumb_up</i></a> 13K
-                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
+                                <a href='#'><i class='material-icons'>thumb_up</i></a> 13K
+                                <a href='#'><i class='material-icons dislike'>thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
                                 <a href='#'>View 146 replies </a>
-                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'><i class='material-icons'>keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -130,20 +131,20 @@
                         <div class='comment-info'>
                             <div class='comment-who-when'>
                                 <h5><a href='#'>Lady Gaga</a></h5>
-                                <i class="material-icons">check_circle</i>
+                                <i class='material-icons'>check_circle</i>
                                 <a class='ago' href='#'>1 month ago</a>
                             </div>
                             <p class='comment-text'>
                                 We're far from the shallow now! 🍋
                             </p>
                             <div class='comment-options'>
-                                <a href='#'><i class="material-icons">thumb_up</i></a> 2.9K
-                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
+                                <a href='#'><i class='material-icons'>thumb_up</i></a> 2.9K
+                                <a href='#'><i class='material-icons dislike'>thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
                                 <a href='#'>View 21 replies </a>
-                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'><i class='material-icons'>keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -153,20 +154,20 @@
                         <div class='comment-info'>
                             <div class='comment-who-when'>
                                 <h5><a href='#'>Taylor Swift</a></h5>
-                                <i class="material-icons">check_circle</i>
+                                <i class='material-icons'>check_circle</i>
                                 <a class='ago' href='#'>1 month ago</a>
                             </div>
                             <p class='comment-text'>
                                 Look what you made me do. 👸
                             </p>
                             <div class='comment-options'>
-                                <a href='#'><i class="material-icons">thumb_up</i></a> 5.1K
-                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
+                                <a href='#'><i class='material-icons'>thumb_up</i></a> 5.1K
+                                <a href='#'><i class='material-icons dislike'>thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
                                 <a href='#'>View 82 replies </a>
-                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'><i class='material-icons'>keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -177,20 +178,20 @@
                         <div class='comment-info'>
                             <div class='comment-who-when'>
                                 <h5><a href='#'>Adele</a></h5>
-                                <i class="material-icons">check_circle</i>
+                                <i class='material-icons'>check_circle</i>
                                 <a class='ago' href='#'>2 weeks ago</a>
                             </div>
                             <p class='comment-text'>
                                 Hello... 🔥🔥
                             </p>
                             <div class='comment-options'>
-                                <a href='#'><i class="material-icons">thumb_up</i></a> 1.4K
-                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
+                                <a href='#'><i class='material-icons'>thumb_up</i></a> 1.4K
+                                <a href='#'><i class='material-icons dislike'>thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
                                 <a href='#'>View 16 replies </a>
-                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'><i class='material-icons'>keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -200,20 +201,20 @@
                         <div class='comment-info'>
                             <div class='comment-who-when'>
                                 <h5><a href='#'>Cardi B</a></h5>
-                                <i class="material-icons">check_circle</i>
+                                <i class='material-icons'>check_circle</i>
                                 <a class='ago' href='#'>3 weeks ago</a>
                             </div>
                             <p class='comment-text'>
                                 I like it. ✊🏽✊🏾✊🏿
                             </p>
                             <div class='comment-options'>
-                                <a href='#'><i class="material-icons">thumb_up</i></a> 381
-                                <a href='#'><i class="material-icons dislike">thumb_down</i></a>
+                                <a href='#'><i class='material-icons'>thumb_up</i></a> 381
+                                <a href='#'><i class='material-icons dislike'>thumb_down</i></a>
                                 <a href='#'>Reply</a>
                             </div>
                             <div class='replies'>
                                 <a href='#'>View 3 replies </a>
-                                <a href='#'><i class="material-icons">keyboard_arrow_down</i></a>
+                                <a href='#'><i class='material-icons'>keyboard_arrow_down</i></a>
                             </div>
                         </div>
                     </div>
@@ -228,9 +229,9 @@
                     <h2>Up next</h2>
                     <div class='autoplay'>
                         Autoplay
-                        <div class="onoffswitch">
-                            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                            <label class="onoffswitch-label" for="myonoffswitch"></label>
+                        <div class='onoffswitch'>
+                            <input type='checkbox' name='onoffswitch' class='onoffswitch-checkbox' id='myonoffswitch' checked>
+                            <label class='onoffswitch-label' for='myonoffswitch'></label>
                         </div>
                     </div>
                 </header>
@@ -254,7 +255,7 @@
                         <img src='assets/beyonce_formation.jpg' alt='Beyoncé - Formation' width='168'>
                         <div class='mix'>
                             50+
-                            <i class="far fa-play-circle"></i>
+                            <i class='far fa-play-circle'></i>
                         </div>
                     </div>
                     <div class='text-container'>
@@ -274,7 +275,7 @@
                         <h4>Childish Gambino - This Is America (Official Video)</h4>
                         <div class='related-channel'>
                             <h6>ChildishGambinoVEVO</h6>
-                            <i class="material-icons">check_circle</i>
+                            <i class='material-icons'>check_circle</i>
                         </div>
                         <h6>495M views</h6>
                     </div></a>
@@ -289,7 +290,7 @@
                         <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
                         <div class='related-channel'>
                             <h6>DJKhaledVEVO</h6>
-                            <i class="material-icons">check_circle</i>
+                            <i class='material-icons'>check_circle</i>
                         </div>
                         <h6>747M views</h6>
                     </div></a>
@@ -332,7 +333,7 @@
                         <h4>Adele - Someone Like You</h4>
                         <div class='related-channel'>
                             <h6>AdeleVEVO</h6>
-                            <i class="material-icons">check_circle</i>
+                            <i class='material-icons'>check_circle</i>
                         </div>
                         <h6>1.2B views</h6>
                     </div></a>
@@ -375,7 +376,7 @@
                         <h4>Rihanna - Needed Me</h4>
                         <div class='related-channel'>
                             <h6>RihannaVEVO</h6>
-                            <i class="material-icons">check_circle</i>
+                            <i class='material-icons'>check_circle</i>
                         </div>
                         <h6>194M views</h6>
                     </div></a>
