Edit input type search and form button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <form action='#' method='post'>
                     <input type='search' name='search-request' size=50 placeholder='Search'>
-                    <button type='submit'><i class='material-icons'>search</i></button>
+                    <button name='submit'><i class='material-icons'>search</i></button>
                 </form>
                 <a href='#'><i class='fas fa-upload'></i></a>
                 <a href='#'><i class='material-icons apps'>apps</i></a>
