--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class='logo-container'>
                     <a href='#'><img src='assets/yt_logo_rgb_dark.png' alt='YouTube logo' height='18'></a>
                 </div>
-                <form action='#' method='post'>
+                <form action='#'>
                     <input type='search' name='search-request' size=50 placeholder='Search'>
                     <button name='submit'><i class='material-icons'>search</i></button>
                 </form>
