--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='us-en'>
+<html lang='en'>
     <head>
         <title>Beyoncé - Formation - YouTube</title>
         <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
@@ -34,7 +34,7 @@
             <section class='video'>
 
                 <div class='video-container'>
-                    <iframe src='https://www.youtube.com/embed/WDZJPJV__bQ' frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
+                    <iframe src='https://www.youtube.com/embed/WDZJPJV__bQ' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen></iframe>
                 </div>
 
                 <header>
@@ -67,8 +67,8 @@
                 </header>
 
                 <div class='video-info'>
-                    <a href='#'><button class='subscribe'>Subscribe  <span class='sub-num'>17M</span></button></a>
-                    <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48px' height='48px'></a>
+                    <button class='subscribe'><a href='#'>Subscribe  <span class='sub-num'>17M</span></a></button>
+                    <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48' height='48'></a>
                     <div class='info-container'>
                         <div class='channel-name'>
                             <h4><a href='#'>Beyoncé</a></h4> <i class='material-icons'>music_note</i>
@@ -96,14 +96,14 @@
                 </header>
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/avatar.png' alt='Avatar' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/avatar.png' alt='Avatar' width='40' height='40'></a>
                     <p class='comment-add'>
                         Add a public comment...
                     </p>
                 </div>
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/rihanna.jpg' alt='Rihanna' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/rihanna.jpg' alt='Rihanna' width='40' height='40'></a>
                     <div class='comment-info'>
                         <div class='comment-who-when'>
                             <h5><a href='#'>Rihanna</a></h5>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/lady_gaga.jpg' alt='Lady Gaga' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/lady_gaga.jpg' alt='Lady Gaga' width='40' height='40'></a>
                     <div class='comment-info'>
                         <div class='comment-who-when'>
                             <h5><a href='#'>Lady Gaga</a></h5>
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/taylor_swift.jpg' alt='Taylor Swift' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/taylor_swift.jpg' alt='Taylor Swift' width='40' height='40'></a>
                     <div class='comment-info'>
                         <div class='comment-who-when'>
                             <h5><a href='#'>Taylor Swift</a></h5>
@@ -173,7 +173,7 @@
 
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/adele.jpg' alt='Adele' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/adele.jpg' alt='Adele' width='40' height='40'></a>
                     <div class='comment-info'>
                         <div class='comment-who-when'>
                             <h5><a href='#'>Adele</a></h5>
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class='comment'>
-                    <a href='#'><img class='channel-icon' src='assets/cardi_b.jpg' alt='Cardi B' width='40px' height='40px'></a>
+                    <a href='#'><img class='channel-icon' src='assets/cardi_b.jpg' alt='Cardi B' width='40' height='40'></a>
                     <div class='comment-info'>
                         <div class='comment-who-when'>
                             <h5><a href='#'>Cardi B</a></h5>
