--- a/index.html
+++ b/index.html
@@ -2,56 +2,39 @@
 <html lang="en">
   <head>
     <title>Beyoncé - Formation - YouTube</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,500"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
+
     <nav>
+
       <a href="#"><i class="material-icons menu">menu</i></a>
       <div class="logo-container">
-        <a href="#"
-          ><img src="assets/yt_logo_rgb_dark.png" alt="YouTube logo" height="18"
-        /></a>
+        <a href="#"><img src="assets/yt_logo_rgb_dark.png" alt="YouTube logo" height="18"></a>
       </div>
       <form action="#">
-        <input
-          type="search"
-          name="search-request"
-          size="50"
-          placeholder="Search"
-        />
-        <button name="submit"><i class="material-icons">search</i></button>
+          <input type="search" name="search-request" size=50 placeholder="Search">
+          <button name="submit"><i class="material-icons">search</i></button>
       </form>
       <a href="#"><i class="fas fa-upload"></i></a>
       <a href="#"><i class="material-icons apps">apps</i></a>
       <a href="#"><i class="fas fa-comment-dots"></i></a>
       <a href="#"><i class="material-icons settings">more_vert</i></a>
       <a class="sign-in" href="#">Sign in</a>
+
     </nav>
 
     <main>
+
       <section class="video">
+
         <div class="video-container">
-          <iframe
-            src="https://www.youtube.com/embed/WDZJPJV__bQ"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <iframe src="https://www.youtube.com/embed/WDZJPJV__bQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <header>
@@ -84,36 +67,26 @@
         </header>
 
         <div class="video-info">
-          <button class="subscribe">
-            Subscribe <span class="sub-num">17M</span>
-          </button>
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/beyonce.jpg"
-              alt="Beyoncé"
-              width="48"
-              height="48"
-          /></a>
+          <button class="subscribe">Subscribe  <span class="sub-num">17M</span></button>
+          <a href="#"><img class="channel-icon" src="assets/beyonce.jpg" alt="Beyoncé" width="48" height="48"></a>
           <div class="info-container">
             <div class="channel-name">
-              <h4><a href="#">Beyoncé</a></h4>
-              <i class="material-icons">music_note</i>
+              <h4><a href="#">Beyoncé</a></h4> <i class="material-icons">music_note</i>
             </div>
             <div class="published">Published on Dec 9, 2016</div>
             <p class="description">
               Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: <a href="#">http://smarturl.it/LEMONADEitunes</a> Amazon.com: <a href="#">http://smarturl.it/LEMONADEcd</a> TIDAL: <a href="#">https://lemonade.tidal.com</a>
             </p>
-            <a href="#"
-              ><div class="show-more">
-                Show more
-              </div></a
-            >
+            <a href="#"><div class="show-more">
+              Show more
+            </div></a>
           </div>
         </div>
+
       </section>
 
       <section class="comments">
+
         <header>
           <h2>40,932 Comments</h2>
           <div class="sort-by">
@@ -123,28 +96,14 @@
         </header>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/avatar.png"
-              alt="Avatar"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/avatar.png" alt="Avatar" width="40" height="40"></a>
           <p class="comment-add">
             Add a public comment...
           </p>
         </div>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/rihanna.jpg"
-              alt="Rihanna"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/rihanna.jpg" alt="Rihanna" width="40" height="40"></a>
           <div class="comment-info">
             <div class="comment-who-when">
               <h5><a href="#">Rihanna</a></h5>
@@ -167,14 +126,7 @@
         </div>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/lady_gaga.jpg"
-              alt="Lady Gaga"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/lady_gaga.jpg" alt="Lady Gaga" width="40" height="40"></a>
           <div class="comment-info">
             <div class="comment-who-when">
               <h5><a href="#">Lady Gaga</a></h5>
@@ -197,14 +149,7 @@
         </div>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/taylor_swift.jpg"
-              alt="Taylor Swift"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/taylor_swift.jpg" alt="Taylor Swift" width="40" height="40"></a>
           <div class="comment-info">
             <div class="comment-who-when">
               <h5><a href="#">Taylor Swift</a></h5>
@@ -227,14 +172,7 @@
         </div>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/adele.jpg"
-              alt="Adele"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/adele.jpg" alt="Adele" width="40" height="40"></a>
           <div class="comment-info">
             <div class="comment-who-when">
               <h5><a href="#">Adele</a></h5>
@@ -257,14 +195,7 @@
         </div>
 
         <div class="comment">
-          <a href="#"
-            ><img
-              class="channel-icon"
-              src="assets/cardi_b.jpg"
-              alt="Cardi B"
-              width="40"
-              height="40"
-          /></a>
+          <a href="#"><img class="channel-icon" src="assets/cardi_b.jpg" alt="Cardi B" width="40" height="40"></a>
           <div class="comment-info">
             <div class="comment-who-when">
               <h5><a href="#">Cardi B</a></h5>
@@ -285,234 +216,173 @@
             </div>
           </div>
         </div>
+
       </section>
+
     </main>
 
     <aside>
+
       <header>
         <h2>Up next</h2>
         <div class="autoplay">
           Autoplay
           <div class="onoffswitch">
-            <input
-              type="checkbox"
-              name="onoffswitch"
-              class="onoffswitch-checkbox"
-              id="myonoffswitch"
-              checked
-            />
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
             <label class="onoffswitch-label" for="myonoffswitch"></label>
           </div>
         </div>
       </header>
 
       <div class="up-next">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/beyonce_hold_up.jpg"
-              alt="Beyoncé - Hold Up (Video)"
-              width="168"
-            />
-            <div class="timestamp">5:17</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/beyonce_hold_up.jpg" alt="Beyoncé - Hold Up (Video)" width="168">
+          <div class="timestamp">5:17</div>
+        </div>
+        <div class="text-container">
+          <h4>Beyoncé - Hold Up (Video)</h4>
+          <div class="related-channel">
+            <h6>BeyoncéVEVO
+            162M views</h6>
           </div>
-          <div class="text-container">
-            <h4>Beyoncé - Hold Up (Video)</h4>
-            <div class="related-channel">
-              <h6>BeyoncéVEVO
-              162M views</h6>
-            </div>
-          </div></a
-        >
+        </div></a>
       </div>
 
-      <a href="#"
-        ><div class="related-video">
-          <div class="thumbnail-container">
-            <img
-              src="assets/beyonce_formation.jpg"
-              alt="Beyoncé - Formation"
-              width="168"
-            />
-            <div class="mix">
-              50+
-              <i class="far fa-play-circle"></i>
-            </div>
+      <a href="#"><div class="related-video">
+        <div class="thumbnail-container">
+          <img src="assets/beyonce_formation.jpg" alt="Beyoncé - Formation" width="168">
+          <div class="mix">
+            50+
+            <i class="far fa-play-circle"></i>
           </div>
-          <div class="text-container">
-            <h4>Mix - Beyoncé - Formation</h4>
-            <div class="related-channel">
-              <h6>YouTube</h6>
-            </div>
+        </div>
+        <div class="text-container">
+          <h4>Mix - Beyoncé - Formation</h4>
+          <div class="related-channel">
+            <h6>YouTube</h6>
           </div>
-        </div></a
-      >
+        </div>
+      </div></a>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/childish_gambino_this_is_america.jpg"
-              alt="Childish Gambino - This Is America (Official Video)"
-              width="168"
-            />
-            <div class="timestamp">4:05</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/childish_gambino_this_is_america.jpg" alt="Childish Gambino - This Is America (Official Video)" width="168">
+          <div class="timestamp">4:05</div>
+        </div>
+        <div class="text-container">
+          <h4>Childish Gambino - This Is America (Official Video)</h4>
+          <div class="related-channel">
+            <h6>ChildishGambinoVEVO</h6>
+            <i class="material-icons">check_circle</i>
           </div>
-          <div class="text-container">
-            <h4>Childish Gambino - This Is America (Official Video)</h4>
-            <div class="related-channel">
-              <h6>ChildishGambinoVEVO</h6>
-              <i class="material-icons">check_circle</i>
-            </div>
-            <h6>495M views</h6>
-          </div></a
-        >
+          <h6>495M views</h6>
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/dj_khaled_wild_thoughts.jpg"
-              alt="DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller"
-              width="168"
-            />
-            <div class="timestamp">3:36</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/dj_khaled_wild_thoughts.jpg" alt="DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller" width="168">
+          <div class="timestamp">3:36</div>
+        </div>
+        <div class="text-container">
+          <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
+          <div class="related-channel">
+            <h6>DJKhaledVEVO</h6>
+            <i class="material-icons">check_circle</i>
           </div>
-          <div class="text-container">
-            <h4>DJ Khaled - Wild Thoughts ft. Rihanna, Bryson Tiller</h4>
-            <div class="related-channel">
-              <h6>DJKhaledVEVO</h6>
-              <i class="material-icons">check_circle</i>
-            </div>
-            <h6>747M views</h6>
-          </div></a
-        >
+          <h6>747M views</h6>
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/cardi_b_bodak_yellow.jpg"
-              alt="Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]"
-              width="168"
-            />
-            <div class="timestamp">3:54</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/cardi_b_bodak_yellow.jpg" alt="Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]" width="168">
+          <div class="timestamp">3:54</div>
+        </div>
+        <div class="text-container">
+          <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
+          <div class="related-channel">
+            <h6>Cardi B
+            734M views</h6>
           </div>
-          <div class="text-container">
-            <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
-            <div class="related-channel">
-              <h6>Cardi B
-              734M views</h6>
-            </div>
-          </div></a
-        >
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/beyonce_sorry.jpg"
-              alt="Beyoncé - Sorry (Video)"
-              width="168"
-            />
-            <div class="timestamp">4:26</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/beyonce_sorry.jpg" alt="Beyoncé - Sorry (Video)" width="168">
+          <div class="timestamp">4:26</div>
+        </div>
+        <div class="text-container">
+          <h4>Beyoncé - Sorry (Video)</h4>
+          <div class="related-channel">
+            <h6>BeyoncéVEVO
+            286M views</h6>
           </div>
-          <div class="text-container">
-            <h4>Beyoncé - Sorry (Video)</h4>
-            <div class="related-channel">
-              <h6>BeyoncéVEVO
-              286M views</h6>
-            </div>
-          </div></a
-        >
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/adele_someone_like_you.jpg"
-              alt="Adele - Someone Like You"
-              width="168"
-            />
-            <div class="timestamp">4:45</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/adele_someone_like_you.jpg" alt="Adele - Someone Like You" width="168">
+          <div class="timestamp">4:45</div>
+        </div>
+        <div class="text-container">
+          <h4>Adele - Someone Like You</h4>
+          <div class="related-channel">
+            <h6>AdeleVEVO</h6>
+            <i class="material-icons">check_circle</i>
           </div>
-          <div class="text-container">
-            <h4>Adele - Someone Like You</h4>
-            <div class="related-channel">
-              <h6>AdeleVEVO</h6>
-              <i class="material-icons">check_circle</i>
-            </div>
-            <h6>1.2B views</h6>
-          </div></a
-        >
+          <h6>1.2B views</h6>
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/beyonce_run_the_world.jpg"
-              alt="Beyoncé - Run the World (Girls) (Video - Main Version)"
-              width="168"
-            />
-            <div class="timestamp">4:51</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/beyonce_run_the_world.jpg" alt="Beyoncé - Run the World (Girls) (Video - Main Version)" width="168">
+          <div class="timestamp">4:51</div>
+        </div>
+        <div class="text-container">
+          <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
+          <div class="related-channel">
+            <h6>BeyoncéVEVO
+            438M views</h6>
           </div>
-          <div class="text-container">
-            <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
-            <div class="related-channel">
-              <h6>BeyoncéVEVO
-              438M views</h6>
-            </div>
-          </div></a
-        >
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/the_carters_apes**t.jpg"
-              alt="APES**T - THE CARTERS"
-              width="168"
-            />
-            <div class="timestamp">6:06</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/the_carters_apes**t.jpg" alt="APES**T - THE CARTERS" width="168">
+          <div class="timestamp">6:06</div>
+        </div>
+        <div class="text-container">
+          <h4>APES**T - THE CARTERS</h4>
+          <div class="related-channel">
+            <h6>BeyoncéVEVO
+            157M views</h6>
           </div>
-          <div class="text-container">
-            <h4>APES**T - THE CARTERS</h4>
-            <div class="related-channel">
-              <h6>BeyoncéVEVO
-              157M views</h6>
-            </div>
-          </div></a
-        >
+        </div></a>
       </div>
 
       <div class="related-video">
-        <a href="#"
-          ><div class="thumbnail-container">
-            <img
-              src="assets/rihanna_needed_me.jpg"
-              alt="Rihanna - Needed Me"
-              width="168"
-            />
-            <div class="timestamp">3:15</div>
+        <a href="#"><div class="thumbnail-container">
+          <img src="assets/rihanna_needed_me.jpg" alt="Rihanna - Needed Me" width="168">
+          <div class="timestamp">3:15</div>
+        </div>
+        <div class="text-container">
+          <h4>Rihanna - Needed Me</h4>
+          <div class="related-channel">
+            <h6>RihannaVEVO</h6>
+            <i class="material-icons">check_circle</i>
           </div>
-          <div class="text-container">
-            <h4>Rihanna - Needed Me</h4>
-            <div class="related-channel">
-              <h6>RihannaVEVO</h6>
-              <i class="material-icons">check_circle</i>
-            </div>
-            <h6>194M views</h6>
-          </div></a
-        >
+          <h6>194M views</h6>
+        </div></a>
       </div>
 
       <button>Show more</button>
+
     </aside>
+
   </body>
 </html>
