--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </header>
 
                 <div class='video-info'>
-                    <button class='subscribe'><a href='#'>Subscribe  <span class='sub-num'>17M</span></a></button>
+                    <button class='subscribe'>Subscribe  <span class='sub-num'>17M</span></button>
                     <a href='#'><img class='channel-icon' src='assets/beyonce.jpg' alt='Beyoncé' width='48' height='48'></a>
                     <div class='info-container'>
                         <div class='channel-name'>
