--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
             </div>
             <div class="published">Published on Dec 9, 2016</div>
             <p class="description">
-              Grammy nominated best video of the year "Formation" from LEMONADE
-              the Visual Album Available Now! iTunes:
-              <a href="#">http://smarturl.it/LEMONADEitunes</a> Amazon.com:
-              <a href="#">http://smarturl.it/LEMONADEcd</a> TIDAL:
-              <a href="#">https://lemonade.tidal.com</a>
+              Grammy nominated best video of the year "Formation" from LEMONADE the Visual Album Available Now! iTunes: <a href="#">http://smarturl.it/LEMONADEitunes</a> Amazon.com: <a href="#">http://smarturl.it/LEMONADEcd</a> TIDAL: <a href="#">https://lemonade.tidal.com</a>
             </p>
             <a href="#"
               ><div class="show-more">
@@ -323,7 +319,8 @@
           <div class="text-container">
             <h4>Beyoncé - Hold Up (Video)</h4>
             <div class="related-channel">
-              <h6>BeyoncéVEVO 162M views</h6>
+              <h6>BeyoncéVEVO
+              162M views</h6>
             </div>
           </div></a
         >
@@ -406,7 +403,8 @@
           <div class="text-container">
             <h4>Cardi B - Bodak Yellow [OFFICIAL MUSIC VIDEO]</h4>
             <div class="related-channel">
-              <h6>Cardi B 734M views</h6>
+              <h6>Cardi B
+              734M views</h6>
             </div>
           </div></a
         >
@@ -425,7 +423,8 @@
           <div class="text-container">
             <h4>Beyoncé - Sorry (Video)</h4>
             <div class="related-channel">
-              <h6>BeyoncéVEVO 286M views</h6>
+              <h6>BeyoncéVEVO
+              286M views</h6>
             </div>
           </div></a
         >
@@ -465,7 +464,8 @@
           <div class="text-container">
             <h4>Beyoncé - Run the World (Girls) (Video - Main Version)</h4>
             <div class="related-channel">
-              <h6>BeyoncéVEVO 438M views</h6>
+              <h6>BeyoncéVEVO
+              438M views</h6>
             </div>
           </div></a
         >
@@ -484,7 +484,8 @@
           <div class="text-container">
             <h4>APES**T - THE CARTERS</h4>
             <div class="related-channel">
-              <h6>BeyoncéVEVO 157M views</h6>
+              <h6>BeyoncéVEVO
+              157M views</h6>
             </div>
           </div></a
         >
